// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ConfigItem-EditInput render input and click select icon 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
          >
            <input
              class="ant-input css-dev-only-do-not-override-ywkr0o"
              id="editInput"
              placeholder="请输入{{name}}"
              type="text"
              value="val key"
            />
            <span
              class="ant-input-group-addon"
            >
              <svg
                class="custom-icon custom-icon-selected"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="selected"
                >
                  <path
                    d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                    id="Vector"
                    stroke="#4583FF"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ConfigItem-EditInput render input for error 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 ant-input-group-wrapper-status-error css-dev-only-do-not-override-ywkr0o"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
          >
            <input
              class="ant-input ant-input-status-error css-dev-only-do-not-override-ywkr0o"
              id="editInput"
              placeholder="请输入{{name}}"
              type="text"
              value="1"
            />
            <span
              class="ant-input-group-addon"
            >
              <svg
                class="custom-icon custom-icon-selected"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="selected"
                >
                  <path
                    d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                    id="Vector"
                    stroke="#4583FF"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ConfigItem-EditInput render input for key 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
          >
            <input
              class="ant-input css-dev-only-do-not-override-ywkr0o"
              id="editInput"
              placeholder="请输入{{name}}"
              type="text"
              value="val key"
            />
            <span
              class="ant-input-group-addon"
            >
              <svg
                class="custom-icon custom-icon-selected"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="selected"
                >
                  <path
                    d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                    id="Vector"
                    stroke="#4583FF"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ConfigItem-EditInput render input val change 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
          >
            <input
              class="ant-input css-dev-only-do-not-override-ywkr0o"
              id="editInput"
              placeholder="请输入{{name}}"
              type="text"
              value="default val"
            />
            <span
              class="ant-input-group-addon"
            >
              <svg
                class="custom-icon custom-icon-selected"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="selected"
                >
                  <path
                    d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                    id="Vector"
                    stroke="#4583FF"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ConfigItem-EditInput render loading is true 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <span
          class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
        >
          <span
            class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
          >
            <input
              class="ant-input css-dev-only-do-not-override-ywkr0o"
              id="editInput"
              placeholder="请输入{{name}}"
              type="text"
              value="default val"
            />
            <span
              class="ant-input-group-addon"
            >
              <svg
                class="custom-icon custom-icon-selected"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="selected"
                >
                  <path
                    d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                    id="Vector"
                    stroke="#4583FF"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;
